--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "morgan": "^1.10.1",
+    "openai": "^5.16.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
