--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
-    "eslint": "^9.34.0",
-    "globals": "^16.3.0",
+    "eslint": "^9.35.0",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-plugin-import": "^2.32.0",
+    "globals": "^16.4.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2"
   }
