--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "smoke": "bash scripts/smoke.sh",
     "format": "prettier --write .",
     "lint": "eslint ."
   },
