--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,38 +16,53 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 22
-          cache: npm
+          node-version: '22'
+          cache: 'npm'
 
-      - name: Install deps
+      - name: Install dependencies
         run: npm ci
+
+      - name: Install jq (for smoke script)
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Create .env
+        run: |
+          cat > .env <<'EOF'
+          HOST=127.0.0.1
+          PORT=13800
+          NODE_ENV=development
+          EOF
 
       - name: Start server
         run: |
-          node src/server.js &
-          echo $! > .server_pid
-        env:
-          HOST: 127.0.0.1
-          PORT: 13800
-          NODE_ENV: development
+          nohup npm run start > /tmp/server.log 2>&1 &
+          echo $! > /tmp/server.pid
+          sleep 1
+          echo "Server PID: $(cat /tmp/server.pid)"
 
-      - name: Wait for server (healthcheck)
+      - name: Wait for health
         run: |
           for i in {1..30}; do
             if curl -fsS http://127.0.0.1:13800/api/v1/health >/dev/null; then
-              echo "Server is up"; exit 0
+              echo "Health OK"
+              exit 0
             fi
+            echo "Waiting for server... ($i)"
             sleep 1
           done
-          echo "Server never became healthy"; exit 1
+          echo "Server did not become healthy in time."
+          echo "---- server.log (tail) ----"
+          tail -n 200 /tmp/server.log
+          exit 1
 
-      - name: Smoke tests
+      - name: Smoke
         run: npm run smoke
 
       - name: Lint
         run: npm run lint
 
-      - name: Stop server
+      - name: Always show server log tail
         if: always()
         run: |
-          kill -9 "$(cat .server_pid)" 2>/dev/null || true
+          echo "---- server.log (tail) ----"
+          tail -n 200 /tmp/server.log || true
