--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: CI
+
 on:
   push:
   pull_request:
@@ -6,7 +7,20 @@ on:
 jobs:
   node:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
+
+    # Job-wide environment (no duplicates)
+    env:
+      HOST: 127.0.0.1
+      PORT: 13800
+      NODE_ENV: development
+      NO_PROXY: 127.0.0.1,localhost
+      http_proxy: ""
+      https_proxy: ""
+      HTTP_PROXY: ""
+      HTTPS_PROXY: ""
+      ALL_PROXY: ""
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -20,44 +34,41 @@ jobs:
       - name: Install deps
         run: npm ci
 
-      - name: Start server (background)
-        env:
-          HOST: 127.0.0.1
-          PORT: 13880
-          NODE_ENV: development
-          http_proxy: ""
-          https_proxy: ""
-          HTTP_PROXY: ""
-          HTTPS_PROXY: ""
+      - name: Start server
         run: |
-          node src/server.js > server.log 2>&1 &
+          nohup npm run start > server.log 2>&1 &
           echo $! > server.pid
-          echo "PID=$(cat server.pid)"
 
       - name: Wait for health
         run: |
-          for i in {1..40}; do
-            if curl -fsS "http://127.0.0.1:13880/api/v1/health" >/dev/null; then
-              echo "healthy"; break
+          for i in {1..60}; do
+            code=$(curl -sS -o /dev/null -w "%{http_code}" http://127.0.0.1:13800/api/v1/health || true)
+            if [ "$code" = "200" ]; then
+              echo "Server is up."
+              exit 0
             fi
-            sleep 0.5
+            sleep 1
           done
-          # one last assert
-          curl -fsS "http://127.0.0.1:13880/api/v1/health"
+          echo "Timed out waiting for server"
+          echo "---- server.log (tail) ----"
+          tail -n 200 server.log || true
+          exit 1
 
       - name: Smoke test
-        run: bash scripts/smoke.sh
+        run: npm run smoke
 
       - name: Lint
         run: npm run lint
 
-      - name: Show server log (always)
-        if: always()
+      - name: Print server log on failure
+        if: failure()
         run: |
-          echo "----- server.log -----"
-          tail -n +1 server.log || true
+          echo "---- server.log (tail) ----"
+          tail -n 200 server.log || true
+          echo "---- ps aux | grep node ----"
+          ps aux | grep node || true
 
-      - name: Stop server (always)
+      - name: Stop server
         if: always()
         run: |
-          kill "$(cat server.pid)" 2>/dev/null || true
+          if [ -f server.pid ]; then kill $(cat server.pid) || true; fi
