ci: robust health wait, install jq, capture logs, cleanup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,19 +7,15 @@ on:
 jobs:
   node:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 10
 
-    # Job-wide environment (no duplicates)
     env:
       HOST: 127.0.0.1
       PORT: 13800
       NODE_ENV: development
-      NO_PROXY: 127.0.0.1,localhost
-      http_proxy: ""
-      https_proxy: ""
       HTTP_PROXY: ""
       HTTPS_PROXY: ""
-      ALL_PROXY: ""
+      NO_PROXY: "localhost,127.0.0.1"
 
     steps:
       - name: Checkout
@@ -28,30 +24,35 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
-          cache: 'npm'
+          node-version: 22
+          cache: npm
+
+      - name: Install OS deps (jq for smoke.sh)
+        run: sudo apt-get update && sudo apt-get install -y jq
 
       - name: Install deps
         run: npm ci
 
-      - name: Start server
+      - name: Start server (background) and capture logs
+        shell: bash
         run: |
-          nohup npm run start > server.log 2>&1 &
+          npm run start > server.log 2>&1 &
           echo $! > server.pid
+          # optional: live tail so logs show in the step output too
+          tail -n +1 -f server.log &
+          echo $! > tail.pid
 
-      - name: Wait for health
+      - name: Wait for health (max 45s)
+        shell: bash
         run: |
-          for i in {1..60}; do
-            code=$(curl -sS -o /dev/null -w "%{http_code}" http://127.0.0.1:13800/api/v1/health || true)
-            if [ "$code" = "200" ]; then
-              echo "Server is up."
+          for i in {1..45}; do
+            if curl -fsS "http://127.0.0.1:${PORT}/api/v1/health" >/dev/null; then
+              echo "Server is healthy"
               exit 0
             fi
             sleep 1
           done
-          echo "Timed out waiting for server"
-          echo "---- server.log (tail) ----"
-          tail -n 200 server.log || true
+          echo "::error::Health check timed out"
           exit 1
 
       - name: Smoke test
@@ -60,15 +61,18 @@ jobs:
       - name: Lint
         run: npm run lint
 
-      - name: Print server log on failure
+      - name: Upload server log on failure
         if: failure()
-        run: |
-          echo "---- server.log (tail) ----"
-          tail -n 200 server.log || true
-          echo "---- ps aux | grep node ----"
-          ps aux | grep node || true
+        uses: actions/upload-artifact@v4
+        with:
+          name: server-log
+          path: server.log
 
-      - name: Stop server
+      - name: Cleanup
         if: always()
+        shell: bash
         run: |
-          if [ -f server.pid ]; then kill $(cat server.pid) || true; fi
+          if [ -f tail.pid ]; then kill "$(cat tail.pid)" 2>/dev/null || true; fi
+          if [ -f server.pid ]; then kill "$(cat server.pid)" 2>/dev/null || true; fi
+          pkill -f "node src/server.js" 2>/dev/null || true
+          lsof -i :"${PORT}" || true
