--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,15 +8,11 @@ jobs:
   node:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-
     env:
-      HOST: 0.0.0.0         # bind on all interfaces (safe in GH runner)
-      PORT: 13880
+      HOST: 127.0.0.1
+      PORT: 13800
       NODE_ENV: development
-      HTTP_PROXY: ""        # hard-disable proxies in runner
-      HTTPS_PROXY: ""
-      NO_PROXY: "127.0.0.1,localhost"
-
+      NO_PROXY: 'localhost,127.0.0.1,::1'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,33 +20,42 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: 22
           cache: 'npm'
 
       - name: Install deps
         run: npm ci
 
-      - name: Start server (background)
-        shell: bash
+      - name: Show versions
         run: |
-          npm run start > server.log 2>&1 &
-          echo $! > server.pid
-          echo "Server PID: $(cat server.pid)"
+          node -v
+          npm -v
 
-      - name: Wait for health (max 60s)
-        shell: bash
+      - name: Start server (background)
         run: |
-          for i in {1..60}; do
-            if env -u HTTP_PROXY -u HTTPS_PROXY -u http_proxy -u https_proxy -u ALL_PROXY -u all_proxy \
-                 NO_PROXY="127.0.0.1,localhost" \
-                 curl --noproxy "*" -fsS "http://127.0.0.1:${PORT}/api/v1/health" >/dev/null; then
+          # make sure no proxies interfere with localhost
+          unset http_proxy https_proxy no_proxy HTTP_PROXY HTTPS_PROXY NO_PROXY ALL_PROXY all_proxy
+          nohup npm run start > server.log 2>&1 &
+          echo $! > server.pid
+          sleep 1
+          echo "PID: $(cat server.pid)"
+
+      - name: Wait for health (max 90s)
+        run: |
+          for i in {1..90}; do
+            if curl -fsS "http://127.0.0.1:${PORT}/api/v1/health" >/dev/null; then
               echo "Server is healthy"; exit 0
+            fi
+            # every 5s show a tail to help debugging live
+            if (( i % 5 == 0 )); then
+              echo "--- server.log (tail) ---"
+              tail -n 50 server.log || true
             fi
             sleep 1
           done
           echo "::error::Health check timed out"
-          echo "----- server.log (tail) -----"
-          tail -n +1 server.log
+          echo "--- server.log (full) ---"
+          cat server.log || true
           exit 1
 
       - name: Smoke
@@ -59,16 +64,18 @@ jobs:
       - name: Lint
         run: npm run lint
 
-      - name: Upload server log (always)
+      - name: Upload server.log (always)
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: server-log
           path: server.log
 
-      - name: Cleanup (always)
+      - name: Stop server (always)
         if: always()
-        shell: bash
         run: |
-          if [[ -f server.pid ]]; then kill "$(cat server.pid)" 2>/dev/null || true; fi
-          pkill -f "node src/server.js" 2>/dev/null || true
+          if [[ -f server.pid ]]; then
+            kill -TERM "$(cat server.pid)" 2>/dev/null || true
+            sleep 2
+            kill -KILL "$(cat server.pid)" 2>/dev/null || true
+          fi
