--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,12 @@ jobs:
       HOST: 127.0.0.1
       PORT: 13800
       NODE_ENV: development
-      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}  # <-- must exist in repo Settings → Actions → Secrets
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       HTTP_PROXY: ""
       HTTPS_PROXY: ""
       NO_PROXY: "localhost,127.0.0.1,::1"
       SKIP_MODERATION: "1"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,7 +26,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'npm'
+          cache: npm
 
       - name: Install deps
         run: npm ci
@@ -37,30 +38,22 @@ jobs:
 
       - name: Start server (background)
         run: |
-          # make sure no proxies interfere with localhost
           unset http_proxy https_proxy no_proxy HTTP_PROXY HTTPS_PROXY NO_PROXY ALL_PROXY all_proxy
           nohup npm run start > server.log 2>&1 &
           echo $! > server.pid
-          sleep 1
           echo "PID: $(cat server.pid)"
 
       - name: Wait for health (max 90s)
         run: |
-          for i in {1..90}; do
-            if curl -fsS "http://127.0.0.1:${PORT}/api/v1/health" >/dev/null; then
+          for i in $(seq 1 90); do
+            if curl -fsS --max-time 1 "http://127.0.0.1:${PORT}/api/v1/health" >/dev/null; then
               echo "Server is healthy"; exit 0
-            fi
-            # every 5s show a tail to help debugging live
-            if (( i % 5 == 0 )); then
-              echo "--- server.log (tail) ---"
-              tail -n 50 server.log || true
             fi
             sleep 1
           done
-          echo "::error::Health check timed out"
-          echo "--- server.log (full) ---"
-          cat server.log || true
-          exit 1
+          echo "---- server.log (tail) ----"
+          tail -n +200 server.log || true
+          echo "::error::Health check timed out"; exit 1
 
       - name: Smoke
         run: npm run smoke
@@ -78,7 +71,7 @@ jobs:
       - name: Stop server (always)
         if: always()
         run: |
-          if [[ -f server.pid ]]; then
+          if [ -f server.pid ]; then
             kill -TERM "$(cat server.pid)" 2>/dev/null || true
             sleep 2
             kill -KILL "$(cat server.pid)" 2>/dev/null || true
