--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "dev": "nodemon src/server.js",
     "smoke": "bash scripts/smoke.sh",
     "format": "prettier --write .",
-    "lint": "eslint .",
+    "lint": "eslint --max-warnings=0 src",
     "kill-port": "bash -c 'lsof -nP -iTCP:13080 -sTCP:LISTEN -t | xargs -r kill || true'",
     "dev:clean": "npm run kill-port && nodemon src/server.js"
   },
-  
+
   "keywords": [],
   "author": "",
   "license": "ISC",
