--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+
+# generated videos
+src/visuals/*.mp4
+
+
+# smoke artifacts
+docs/smoke-run-*.log
+visuals/*.mp4
