--- a/.github/workflows/smoke-matrix.yml
+++ b/.github/workflows/smoke-matrix.yml
@@ -7,7 +7,12 @@ on:
 
 jobs:
   seedream4:
-    if: ${{ secrets.SEEDREAM_API_BASE != '' && secrets.SEEDREAM_API_KEY != '' }}
+    # Map secrets to env first
+    env:
+      SEEDREAM_API_BASE: ${{ secrets.SEEDREAM_API_BASE }}
+      SEEDREAM_API_KEY:  ${{ secrets.SEEDREAM_API_KEY }}
+    # Now gate the job using env.* (valid in job-level if:)
+    if: ${{ env.SEEDREAM_API_BASE != '' && env.SEEDREAM_API_KEY != '' }}
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
@@ -15,20 +20,21 @@ jobs:
       - uses: actions/setup-node@v4
         with: { node-version: '20', cache: 'npm' }
       - run: npm ci
-      - run: chmod +x scripts/smoke-visuals-both.sh
-      - name: Start server
-        run: node src/server.js & echo $! > server.pid
+      - name: Make smoke script executable
+        run: chmod +x scripts/smoke-visuals-both.sh
+      - name: Start server (mock)
         env:
           HOST: 127.0.0.1
           PORT: 3000
           NODE_ENV: test
-      - name: Wait for port
-        run: npx wait-on -t 15000 tcp:127.0.0.1:3000
+        run: |
+          node src/server.js & echo $! > server.pid
+          npx wait-on@8 -t 20000 tcp:127.0.0.1:3000 || ( cat server.pid && exit 1 )
       - name: Smoke (seedream4)
         env:
           BASE: http://127.0.0.1:3000/api/v1
-          SEEDREAM_API_BASE: ${{ secrets.SEEDREAM_API_BASE }}
-          SEEDREAM_API_KEY:  ${{ secrets.SEEDREAM_API_KEY }}
+          SEEDREAM_API_BASE: ${{ env.SEEDREAM_API_BASE }}
+          SEEDREAM_API_KEY:  ${{ env.SEEDREAM_API_KEY }}
           VISUAL_PROVIDER: seedream4
         run: bash scripts/smoke-visuals-both.sh > docs/smoke-seedream4.log
       - name: Stop server
@@ -37,36 +43,46 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: smoke-seedream4
-          path: |
-            docs/smoke-seedream4.log
-            src/visuals/*.mp4
+          name: smoke--seedream4
+          path: docs/smoke-*.log
+
 
   nanobanana:
-    if: ${{ secrets.NANOBANANA_API_URL != '' && secrets.NANOBANANA_API_KEY != '' }}
+    # Map secrets to env first
+    env:
+      NANOBANANA_API_URL: ${{ secrets.NANOBANANA_API_URL }}
+      NANOBANANA_API_KEY:  ${{ secrets.NANOBANANA_API_KEY }}
+    # Now gate the job using env.* (valid in job-level if:)
+    if: ${{ env.NANOBANANA_API_URL != '' && env.NANOBANANA_API_KEY != '' }}
     runs-on: ubuntu-latest
-    steps:  # identical to above, but env keys + VISUAL_PROVIDER=nanobanana
+    timeout-minutes: 15
+    steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: '20', cache: 'npm' }
       - run: npm ci
-      - run: chmod +x scripts/smoke-visuals-both.sh
-      - run: node src/server.js & echo $! > server.pid
-        env: { HOST: 127.0.0.1, PORT: 3000, NODE_ENV: test }
-      - run: npx wait-on -t 15000 tcp:127.0.0.1:3000
+      - name: Make smoke script executable
+        run: chmod +x scripts/smoke-visuals-both.sh
+      - name: Start server (mock)
+        env:
+          HOST: 127.0.0.1
+          PORT: 3000
+          NODE_ENV: test
+        run: |
+          node src/server.js & echo $! > server.pid
+          npx wait-on@8 -t 20000 tcp:127.0.0.1:3000 || ( cat server.pid && exit 1 )
       - name: Smoke (nanobanana)
         env:
           BASE: http://127.0.0.1:3000/api/v1
-          NANOBANANA_API_URL: ${{ secrets.NANOBANANA_API_URL }}
-          NANOBANANA_API_KEY: ${{ secrets.NANOBANANA_API_KEY }}
+          SEEDREAM_API_BASE: ${{ env.NANOBANANA_API_URL }}
+          SEEDREAM_API_KEY:  ${{ env.NANOBANANA_API_KEY }}
           VISUAL_PROVIDER: nanobanana
         run: bash scripts/smoke-visuals-both.sh > docs/smoke-nanobanana.log
-      - if: always()
+      - name: Stop server
+        if: always()
         run: kill -9 $(cat server.pid) || true
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: smoke-nanobanana
-          path: |
-            docs/smoke-nanobanana.log
-            src/visuals/*.mp4
+          name: smoke--nanobanana
+          path: docs/smoke-*.log
