--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -25,8 +25,13 @@ jobs:
           PORT: 3000
           NODE_ENV: test
           VISUAL_PROVIDER: mock
-        run: node src/server.js > server.log 2>&1 & echo $! > server.pid
+          # keep the server happy even if we never call OpenAI
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_ENABLE: "false"
+          MOD_ENABLE: "false"
 
+        run: node src/server.js > server.log 2>&1 & echo $! > server.pid
+        
       - name: Wait for port
         run: npx --yes wait-on@7 -t 60000 tcp:127.0.0.1:3000 || (echo '--- server.log ---'; cat server.log; exit 1)
 
@@ -52,3 +57,6 @@ jobs:
           path: |
             server.log
             docs/smoke-*.log
+      
+
+
