ci(smoke): pass PROV=mock to smoke step to avoid provider=both

--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -39,6 +39,7 @@ jobs:
         env:
           BASE: http://127.0.0.1:3000/api/v1
           VISUAL_PROVIDER: mock
+          PROV: mock 
         run: |
           set -euo pipefail
           curl -sS "$BASE/visuals/health" | jq .
